# esp-projects

./: README.md
oled-video-player/: README.md  shell.nix
oled-video-player/esp32-firmware/: Cargo.toml  build.rs  sdkconfig.defaults
oled-video-player/esp32-firmware/.cargo/: config.toml
oled-video-player/esp32-firmware/src/: frame.rs  main.rs  oled.rs  wifi.rs
oled-video-player/shared/: .gitignore
oled-video-player/shared/src/: lib.rs
oled-video-player/ui/: Cargo.toml  Dioxus.toml
oled-video-player/ui/assets/: main.css  tailwind.css
oled-video-player/ui/src/: main.rs
