[package]
name = "ui"
version = "0.1.0"
authors = ["Polvos Magicos <73202603+PolvosMagicos@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.9", features = [] }
gloo-net = "0.7.0"
gloo-timers = { version = "0.4.0", features = ["futures"] }
js-sys = "0.3.103"
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"

web-sys = { version = "0.3.103", features = [
    "Window",
    "Document",
    "Element",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlVideoElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "FileList",
    "File",
    "Blob",
    "Url",
    "HtmlMediaElement",
    "console",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
